@@ -50,6 +50,12 @@ three provide essentially the same functionality, respectively for GTK, QT and
 WXWidgets (via their Python interfaces).
 .br
 .sp 1
+Note that with \-wthread, you can additionally use the \-wxversion option to
+request a specific version of wx to be used.  This requires that you have the
+'wxversion' Python module installed, which is part of recent wxPython
+distributions.
+.br
+.sp 1
 If \-pylab is given, IPython loads special support for the matplotlib library
 (http://matplotlib.sourceforge.net), allowing interactive usage of any of its
 backends as defined in the user's .matplotlibrc file.  It automatically
@@ -356,6 +362,11 @@ have in your personal files.
 .TP
 .B \-Version
 Print version information and exit.
+.TP
+.B -wxversion <string>
+Select a specific version of wxPython (used in conjunction with
+\-wthread). Requires the wxversion module, part of recent wxPython
+distributions.
 .TP
 .B \-xmode <modename>
 Mode for exception reporting.  The valid modes are Plain, Context, and
